@@ -1,6 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.3.8:
+  * enhancement: cached make-instance/allocate-instance constructors can now
+    get garbage collected. 
+  * optimization: better performance for some unoptimized operations on
+    complex numbers.
   * bug fix: using the options :LOCAL-NICKNAMES and :LOCK in the same
     DEFPACKAGE form no longer signals a bogus error
 
